syntax = "proto3";
package dta.wir.api.v1.coreLessons;

option go_package = "github.com/weltcorp/dta-lib-proto/go-api/wir/v1/coreLessons";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

service CoreLessonsData {
  rpc GetUserCoreLessons(GetUserCoreLessonsRequest) returns (GetUserCoreLessonsResponse) {
    option (google.api.http) = { get: "/v1/coreLessons/users/{userId}"};
  }
}

message GetUserCoreLessonsRequest {
  int32 userId = 1;
}

message GetUserCoreLessonsResponse {
  repeated Session data = 1;
}

message Session {
  int32 sessionId = 1;
  int32 order = 2;
  string name = 3;
  string description = 4;
  int32 projectAppId = 5;
  int32 userLearningStatus = 6;
  repeated SessionItem sessionItems = 7;
}

message SessionItem {
  int32 sessionItemId = 1;
  int32 itemTypeId = 2;
  int32 order = 3;
  string name = 4;
  string description = 5;
  int32 userLearningStatus = 6;
  google.protobuf.Struct data = 7;
  repeated int32 pageIds = 8;
}
