syntax = "proto3";
package dta.wir.api.v1.diaries;

option go_package = "github.com/weltcorp/dta-lib-proto/go-api/wir/v1/diaries";

import "validate/validate.proto";
import "google/api/annotations.proto";

service DiariesData {
  rpc PutUserDiaryToday(PutUserDiaryTodayRequest) returns (PutUserDiaryTodayResponse) {
    option (google.api.http) = { put: "/v1/diaries/users/{userId}/today", body: "*" };
  }
  rpc GetUserDiary(GetUserDiaryRequest) returns (GetUserDiaryResponse) {
    option (google.api.http) = { get: "/v1/diaries/users/{userId}" };
  }
}

message PutUserDiaryTodayRequest {
  int32 userId = 1[(validate.rules).int32.gt = 0];
  int32 date = 2[(validate.rules).int32.gt = 0];
  DiaryAnswer answers = 3;
}

message PutUserDiaryTodayResponse {
  int32 answerId = 1;
}

message GetUserDiaryRequest {
  int32 userId = 1[(validate.rules).int32.gt = 0];
  optional int32 date = 2[(validate.rules).int32.gt = 0];
  optional int32 answerId = 3[(validate.rules).int32.gt = 0];
}

message GetUserDiaryResponse {
  int32 answerId = 1;
  int32 date = 2;
  DiaryAnswer answers = 3;
}

message DiaryAnswer{
  bool dns = 1;
  optional int32 lot = 2;
  optional int32 ast = 3;
  optional int32 aet = 4;
  optional int32 waso = 5;
  repeated Answer problem = 6;
  repeated Answer lifestyle = 7;
  bool pill = 8;
  int32 nap = 9;
  optional int32 sleepQuality = 10;
  optional int32 tst = 11;
}

message Answer {
  int32 optionKey = 2;
  string answerText = 3;
}
